--- a/templates/site/site.html.twig
+++ b/templates/site/site.html.twig
@@ -1,10 +1,51 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des sites{% endblock %}
+{% block title %}Liste des villes{% endblock %}
 
 {% block body %}
 
     <div class="example-wrapper">
-        <h1>Ceci est la page des listes sites ENI</h1>
+        <h1>Gérer les sites (admin)</h1>
+        <h2>Filtre des sites</h2>
+        <form id="filtre" class="pure-g pure-form">
+            <div id="filtre-option" class="pure-u-2-3">
+                <div class="pure-g">
+                    <div class="pure-u-1-2">
+
+                        <div class="pure-g">
+                            <label for="recherche-nom" class="pure-u-1-2">Le nom du site contient : </label>
+                            <input id="recherche-nom" type="text" class="pure-u-1-2">
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div id="filtre-recherche" class="pure-u-1-3">
+                <button type="submit">Rechercher</button>
+            </div>
+        </form>
+        <br>
+        <br>
+        <table class="pure-table">
+            <thead>
+            <tr>
+                <th>Ville</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for site in sites %}
+                <tr>
+                    <td>{{ site.nom }}</td>
+                    <td><a href="{{ path('update_site', {id:site.id}) }}">Modifier</a> - <a href="{{ path('remove_site', {id:site.id}) }}">Supprimer</a></td>
+                </tr>
+            {% endfor %}
+            <tr>
+                <td></td>
+                <td><a href="{{ path('new_site') }}">Ajouter un site</a></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 {% endblock %}
