--- a/templates/ville/ville.html.twig
+++ b/templates/ville/ville.html.twig
@@ -6,6 +6,27 @@
 
 <div class="example-wrapper">
     <h1>Gérer les villes (admin)</h1>
+    <h2>Filtre des villes</h2>
+    <form id="filtre" class="pure-g pure-form">
+        <div id="filtre-option" class="pure-u-2-3">
+            <div class="pure-g">
+                <div class="pure-u-1-2">
+
+                    <div class="pure-g">
+                        <label for="recherche-nom" class="pure-u-1-2">Le nom de la ville contient : </label>
+                        <input id="recherche-nom" type="text" class="pure-u-1-2">
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+        <div id="filtre-recherche" class="pure-u-1-3">
+            <button type="submit">Rechercher</button>
+        </div>
+    </form>
+    <br>
+    <br>
     <table class="pure-table">
         <thead>
         <tr>
