UPDATE #2008 front : Mise en place du style et modification des routes, liens, boutons !

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,3 +35,9 @@
 }#lol>tr:nth-child(even){
     background: rgba(53, 150, 47, 0.35);
 }
+
+
+.displayer{
+    background: #e0e0e0;
+    color: rgba(35, 33, 33, 0.85) !important;
+}
