--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/2.0.6/pure-min.css"
           integrity="sha512-/VectwrK3cVMbl6IFsHj/O+fbxfLQm5rved2LR8HnaNuIL6fs8yBXNSi25hhQCB2713sc3Cbh5a4wLRSsZvDxg=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-
     <title>
         {% block title %}Welcome!{% endblock %}
     </title>
+
     <link href="{{ asset('css/main.css') }}" rel="stylesheet">
     {% block stylesheets %}
     {% endblock %}
@@ -26,7 +26,7 @@
                     <a href="{{ path('home') }}" class="pure-menu-link">Accueil</a>
                 </li>
                 <li class="pure-menu-item">
-                    <a href="{{ path('participant_edit', {"id" : app.user.id}) }}" class="pure-menu-link">Mon profil</a>
+                    <a href="{{ path('participant_show', {"id" : app.user.id}) }}" class="pure-menu-link">Mon profil</a>
                 </li>
                 <li class="pure-menu-item">
                     <a href="{{ path('app_logout') }}" class="pure-menu-link">Se déconnecter</a>
