--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -5,6 +5,44 @@
 {% block body %}
 
     <div class="example-wrapper">
-        <h1>Ceci est la page de modification d'une sortie</h1>
+        <form method="post" class="pure-form pure-form-aligned"
+              style="	position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+    ">
+            <fieldset>
+                <legend>Modifier une sortie</legend>
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.nom) }}
+                </div>
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.dateHeureDebut) }}
+                </div>
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.nbInscriptionMax) }}
+                </div>
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.infosSortie) }}
+                </div>
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.site) }}
+                </div>
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.lieu) }}
+                </div>
+
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.duree) }}
+                </div>
+                <div class="pure-control-group">
+                    {{ form_row(formUpdate.dateLimiteInscription) }}
+                </div>
+
+                <button class="pure-button pure-button-primary">{{ button_label|default('Enregistrer') }}</button>
+            </fieldset>
+            {{ form_rest(formUpdate) }}
+        </form>
+
     </div>
 {% endblock %}
