ADD #2006 : Préparation à l'annulation

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -114,18 +114,28 @@
                                        href="{{ path('sortie_publication', {"id" : sortie.id}) }}">Publier</a>
                                 </td>
                             {% elseif sortie.etat.id == 2 %}
-                                <td>
-                                    <a class="pure-button button-primary"
-                                       href="{{ path('sortie_details', {"id" : sortie.id}) }}">Afficher</a>
-                                    -
-                                    {% if find == 1 %}
-                                        <a class="pure-button button-secondary"
-                                           href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">Se désister</a>
-                                    {% else %}
-                                        <a class="pure-button button-secondary"
-                                           href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">S'inscrire</a>
-                                    {% endif %}
-                                </td>
+                                {% if app.user.id == sortie.organisateur.id %}
+                                    <td>
+                                        <a class="pure-button button-primary"
+                                           href="{{ path('sortie_details', {"id" : sortie.id}) }}">Afficher</a>
+                                        -
+                                            <a class="pure-button button-secondary"
+                                               href="{{ path('sortie_annuler', {"id" : sortie.id}) }}">Annuler</a>
+                                    </td>
+                                {% else %}
+                                    <td>
+                                        <a class="pure-button button-primary"
+                                           href="{{ path('sortie_details', {"id" : sortie.id}) }}">Afficher</a>
+                                        -
+                                        {% if find == 1 %}
+                                            <a class="pure-button button-secondary"
+                                               href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">Se désister</a>
+                                        {% else %}
+                                            <a class="pure-button button-secondary"
+                                               href="{{ path('sortie_inscription', {"id" : sortie.id}) }}">S'inscrire</a>
+                                        {% endif %}
+                                    </td>
+                                {% endif %}
                             {% elseif sortie.etat.id == 3 %}
                                 <td>
                                     <a class="pure-button button-primary"
