--- a/templates/sortie/sortieAnnulation.html.twig
+++ b/templates/sortie/sortieAnnulation.html.twig
@@ -3,8 +3,27 @@
 {% block title %}Annulation de la sortie{% endblock %}
 
 {% block body %}
-
-    <div class="example-wrapper">
-        <h1>Ceci est la page d'annulation d'une sortie</h1>
-    </div>
+    <main class="example-wrapper">
+        <h1>Annuler une sortie</h1>
+        <div>
+            <p>Nom de la sortie : {{ sortie.nom }}</p>
+        </div>
+        <div>
+            <p>Date : {{ sortie.dateHeureDebut|date('d/m/Y H:i') }}</p>
+        </div>
+        <div>
+            <p>Ville : {{ sortie.lieu.ville.nom }}</p>
+        </div>
+        <div>
+            <p>Lieu : {{ sortie.lieu.nom }} {{ sortie.lieu.rue }}</p>
+        </div>
+        <form method="post">
+            <div>
+                <label for="annulation-motif">Motif : </label>
+                <textarea id="annulation-motif" name="annulation-motif"></textarea>
+            </div>
+            <input type="submit" value="Confirmer" class="pure-button button-primary">
+            <a href="{{ path('home') }}" class="pure-button button-primary">Retour</a>
+        </form>
+    </main>
 {% endblock %}
