--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block body %}
-    <main>
-        <div id="date_compte" class="pure-u-1-1 o-flex-grid c-red">
+    <main class="">
+        <div id="date_compte" class="pure-u-1-4">
             <p>Date du jour : {{ "now"|format_datetime(locale='fr') }}</p>
             <p>Participant : {{ app.user.username }} </p>
         </div>
@@ -38,28 +38,29 @@
                                 <input type="date" id="date-fin" class="pure-u-1-4" name="tri-date-fin">
                             </div>
                         </div>
-                        <div class="pure-u-1-2">
-                            <div class="pure-u-1-1">
-                                <input type="checkbox" id="checkbox-organisateur" name="tri-checkbox-organisateur"/>
+                        <div class="pure-u-1-2 ">
+
+                            <div class="pure-u-1 pure-control-group pure-checkbox">
+                                <input class="m5" type="checkbox" id="checkbox-organisateur" name="tri-checkbox-organisateur"/>
                                 <label for="checkbox-organisateur">Sortie(s) dont je suis l'organisateur(trice)</label>
                             </div>
-                            <div class="pure-u-1-1">
-                                <input type="checkbox" id="checkbox-inscrit" name="tri-checkbox-inscrit"/>
+                            <div class="pure-u-1 pure-control-group pure-checkbox">
+                                <input class="m5" type="checkbox" id="checkbox-inscrit" name="tri-checkbox-inscrit"/>
                                 <label for="checkbox-inscrit">Sortie(s) auxquelles je suis inscrit(e)</label>
                             </div>
-                            <div class="pure-u-1-1">
-                                <input type="checkbox" id="checkbox-non-inscrit" name="tri-checkbox-non-inscrit"/>
+                            <div class="pure-u-1 pure-control-group pure-checkbox">
+                                <input class="m5" type="checkbox" id="checkbox-non-inscrit" name="tri-checkbox-non-inscrit"/>
                                 <label for="checkbox-non-inscrit">Sortie(s) auxquelles je ne suis pas inscrit(e)</label>
                             </div>
-                            <div class="pure-u-1-1">
-                                <input type="checkbox" id="checkbox-passee" name="tri-checkbox-passee"/>
-                                <label for="checkbox-passee">Sortie(s) passée(s)</label>
+                            <div class="pure-u-1 pure-control-group pure-checkbox">
+                                <input class="m5" type="checkbox" id="checkbox-passee" name="tri-checkbox-passee"/>
+                                <label class="m10" for="checkbox-passee">Sortie(s) passée(s)</label>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div id="filtre-recherche" class="pure-u-1-3">
-                    <button type="submit">Rechercher</button>
+                <div id="filtre-recherche" class="pure-controls pure-u-1-3">
+                    <button class="pure-button button-primary" type="submit">Rechercher</button>
                 </div>
             </form>
             <div id="tableau-sortie">
@@ -76,7 +77,7 @@
                         <th>Actions</th>
                     </tr>
                     </thead>
-                    <tbody id="lol">
+                    <tbody id="lol" class="home-liste-sortie">
                     {% for sortie in sorties %}
 
                         <tr class="">
@@ -151,8 +152,8 @@
             </div>
         </div>
         <div id="bouton-creer-sortie">
-            <a href="{{ path('sortie_creer') }}">
-                <button>Créer une sortie</button>
+            <a class="pure-button button-primary" href="{{ path('sortie_creer') }}">
+                Créer une sortie
             </a>
         </div>
     </main>
