--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -35,14 +35,16 @@
         <tr>
             <th>Pseudo</th>
             <th>Nom</th>
+            <th>Detail</th>
         </tr>
         </thead>
         <tbody>
 
             {%  for participant in participants %}
             <tr>
-                <td><a href={{ path("participant_show",{"id":participant.id}) }}>{{ participant.pseudo }}</a></td>
+                <td>{{ participant.pseudo }}</a></td>
                 <td>{{ participant.prenom }} {{ participant.nom }}</td>
+                <td><a class="pure-button button-primary" href={{ path("participant_show",{"id":participant.id}) }}></a></td>
             </tr>
             {% endfor %}
 
