--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,7 @@
     color: white;
     /*border-radius: 4px;*/
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    font-size: 0.8em;
 }
 .button-admin{
     background: rgb(241, 48, 48);
