--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -42,9 +42,9 @@
 
             {%  for participant in participants %}
             <tr>
-                <td>{{ participant.pseudo }}</a></td>
+                <td>{{ participant.pseudo }}</td>
                 <td>{{ participant.prenom }} {{ participant.nom }}</td>
-                <td><a class="pure-button button-primary" href={{ path("participant_show",{"id":participant.id}) }}></a></td>
+                <td><a class="pure-button button-primary" href={{ path("participant_show",{"id":participant.id}) }}>Profil</a></td>
             </tr>
             {% endfor %}
 
