--- a/templates/participant/edit.html.twig
+++ b/templates/participant/edit.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Edit Participant{% endblock %}
 
 {% block body %}
-    {{ include('participant/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('participant/_form.html.twig') }}
 {% endblock %}
