--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -166,7 +166,7 @@
                                     </td>
                                 {% else %}
                                     <td>
-                                        <a class="pure-button button-warning" href="">Archiver</a>
+                                        <button class="pure-button button-warning button-no-button" disabled href="">Archiver</button>
                                     </td>
                                 {% endif %}
                             {% endif %}
